gcc/testsuite/rust/rustc/ui/parser/bad-let-as-field.rs
struct Foo {
    let: i32,
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

